lavado de cara a la aplicacion, ahora tenemos una bbdd con Postgres y tenemos relacionadas las Stores con Productos y Categorías para que sean independientes de la Store con la que estemos trabajando
