# src/main/resources/swagger.yaml
@@ -95,6 +95,98 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/UnexpectedError'
+  /categories:
+    post:
+      summary: Create a category
+      operationId: createCategory
+      requestBody:
+        $ref: '#/components/requestBodies/CategoryRequestDTO'
+      responses:
+        '201':
+          description: Category created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CategoryDTO'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/UnexpectedError'
+    get:
+      summary: Get a list of categories
+      operationId: getCategories
+      responses:
+        '200':
+          $ref: '#/components/responses/ListCategories'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/UnexpectedError'
+  '/categories/{categoryId}':
+    parameters:
+      - $ref: '#/components/parameters/categoryId'
+    get:
+      summary: Get a category by id.
+      operationId: getCategoryById
+      responses:
+        '200':
+          $ref: '#/components/responses/Category'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/UnexpectedError'
+    delete:
+      summary: Delete a category by id.
+      operationId: deleteCategoryById
+      responses:
+        '204':
+          description: Category deleted successfully, no content returned.
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/UnexpectedError'
+    put:
+      summary: Update a category by id.
+      operationId: updateCategoryById
+      requestBody:
+        $ref: '#/components/requestBodies/CategoryRequestDTO'
+      responses:
+        '200':
+          $ref: '#/components/responses/Category'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '403':
+          $ref: '#/components/responses/Forbidden'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/UnexpectedError'
 components:
   requestBodies:
     ProductRequestDTO:
@@ -104,6 +196,13 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/ProductRequestDTO'
+    CategoryRequestDTO:
+      description: Create a new category
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/CategoryRequestDTO'
   parameters:
     productId:
       name: productId
@@ -126,12 +225,26 @@ components:
             type: array
             items:
               $ref: '#/components/schemas/ProductDTO'
+    ListCategories:
+      description: OK.
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/CategoryDTO'
     Product:
       description: OK.
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/ProductDTO'
+    Category:
+      description: OK.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/CategoryDTO'
     BadRequest:
       description: Bad Request
       content:
@@ -232,6 +345,20 @@ components:
           type: integer
           format: int64
           example: 12345
+        storeId:
+          type: integer
+          format: int64
+          example: 12345
+    CategoryRequestDTO:
+      type: object
+      properties:
+        categoryName:
+          type: string
+          example: "Drinks"
+        storeId:
+          type: integer
+          format: int64
+          example: 12345
     ProductDTO:
       type: object
       properties:
@@ -247,6 +374,32 @@ components:
           format: number
           example: "4.99"
         categoryId:
+          type: integer
+          format: int64
+          example: 12345
+        storeId:
+          type: integer
+          format: int64
+          example: 12345
+        createdAt:
+          type: string
+          format: date-time
+          example: "2023-10-01T12:34:56Z"
+        updatedAt:
+          type: string
+          format: date-time
+          example: "2023-10-01T12:34:56Z"
+    CategoryDTO:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          example: 12345
+        categoryName:
+          type: string
+          example: "Drinks"
+        storeId:
           type: integer
           format: int64
           example: 12345
